# Rat-Room-Auth-DB-Logging

./: Cargo.toml  README.md  client.toml  server.toml
src/: client_main.rs  protocol.rs  server_main.rs
src/client/: app.rs  commands.rs  mod.rs  network.rs  ui.rs
src/server/: client_handler.rs  mod.rs  state.rs
src/shared/: protocol.rs
