[package]
name = "ratroom-async"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

[[bin]]
name = "client"
path = "src/client_main.rs"

[[bin]]
name = "server"
path = "src/server_main.rs"